test/files/neg/plugin-multiple-rafter/lib/plugins.jar.desired.sha1
ee728763d50a19e725f729797d5afab05d395c4e ?plugins.jar
